--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE htm<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -65,6 +65,7 @@
             } catch (error) {
                 console.error("Error al obtener tasas:", error);
                 document.getElementById('tasa-bcv').innerText = "Error";
+                document.getElementById('tasa-binance').innerText = "Error";
             }
         }
 
